# film-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: project.contrast-infinity-castle.cost-optimized.yaml  project.contrast-infinity-castle.yaml  project.disqualified.yaml  project.example.yaml  project.the-trace.yaml  project.view-only.yaml  showrunner.contrast-infinity-castle.json  showrunner.disqualified.json
configs/contrast-infinity-castle/: audio.contrast-infinity-castle.json  author_intent.yaml  cinematography.contrast-infinity-castle.json  creative-direction.md  dance-mapping.contrast-infinity-castle.json  direction.contrast-infinity-castle.json  principles.md  shots.yaml  showrunner.contrast-infinity-castle.json  tokens.css  world.yaml
configs/disqualified/: showrunner.disqualified.json
configs/the-trace/: creative-direction.md  principles.md
examples/: project.contrast-infinity-castle.yaml  project.disqualified.yaml  project.example.yaml
examples/contrast-infinity-castle/: cost-optimization.md  creative-direction.md  principles.md  world.yaml
examples/disqualified/: creative-direction.md  principles.md  tokens.css
examples/the-trace/: tokens.css
prompts/: audio.md  cinematography_qa.md  dance_mapping.md  direction.md  main_agent_overlay.md  qa_judge.md  showrunner.md  story_qa.md
roles/audio/: task.md  (+3 more)
schemas/: dance_mapping.schema.json
scripts/: export_json_schemas.py  gen_g2.py  generate_remaining_videos.py  generate_videos_yunwu.py
tests/: helpers.py
(+180 files in other folders)
