[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "film-agent"
version = "0.1.0"
description = "Manual multi-agent pipeline for dance film pre-production and gate validation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
film-agent = "film_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
