[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "film-agent"
version = "0.1.0"
description = "Manual multi-agent pipeline for dance film pre-production and gate validation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "PyYAML>=6.0,<7",
  "openai>=2.1.0,<3",
  "anthropic>=0.40.0,<1",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
providers = [
  "requests>=2.31,<3",
  "python-dotenv>=1.0,<2",
  "moviepy>=2.1,<3",
]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
film-agent = "film_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
film_agent = [
  "resources/prompts/*.md",
  "resources/roles/*/*.md",
  "resources/roles/*/*.json",
  "resources/schemas/*.json",
]
